@@ -100,6 +100,16 @@
     get_msg_key(), get_message_variable[|s]() -> get_msg_var[|s](),
     get_template_[set|member]_names() -> get_[set|member]_names().
 
+    * Updated the test suite to account for the following breaking changes
+    introduced in Locale::KeyedText version 1.06_3:  Empty strings are no
+    longer considered valid for use as a Message Key, names of Message
+    Variables, and elements of Set Names and Member Names; using such would
+    throw an exception rather than succeed.  And so, case by case, any
+    tests giving empty string inputs have been altered to either expect
+    failure on those same inputs, or the inputs have been changed to
+    non-empty strings when the test wasn't specifically about an empty
+    string input and a success had been expected.
+
     * Locale::KeyedText is now licensed under the terms of the GNU Lesser
     General Public License (LGPL) version 3 or later, rather than version
     2.1+ of the same license.  The text of the updated license is now in
